# big-data-infra

./: .gitignore  README.md  pyproject.toml
app/core/: __init__.py  collection.py  database.py  persistence.py  storage.py  wal.py
assets/: architecture.puml
src/: interfaces.py
src/core/: __init__.py  collection.py  database.py  interfaces.py  persistence.py  storage.py  wal.py
tests/: README.md  conftest.py  test_collection.py  test_database.py  test_extra.py  test_persistence.py  test_storage.py  test_wal.py
umls/: architecture.puml
